--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = netnsplice
-version = 0.0.1
+version = 0.1.0
 author = nosoop
 description = Relays content across nework or file sockets
 long_description = file: README.md
@@ -15,3 +15,6 @@ classifiers =
 [options]
 packages = find:
 python_requires = >= 3.7
+install_requires =
+    tomli
+    pydantic>=1.10.0
