Implement support for Linux network namespaces

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = netnsplice
-version = 0.1.1
+version = 0.2.0
 author = nosoop
 description = Relays content across nework or file sockets
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/nosoop/netnsplice
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
     Topic :: Internet
     Topic :: System :: Networking
@@ -18,3 +18,7 @@ python_requires = >= 3.8
 install_requires =
     tomli
     pydantic>=1.10.0
+
+[options.extras_require]
+netns =
+    netns
