Create script binary on install

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,7 @@ install_requires =
 [options.extras_require]
 netns =
     netns
+
+[options.entry_points]
+console_scripts =
+    netnsplice = netnsplice.__main__:main
