--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ long_description_content_type = text/markdown
 url = https://github.com/nosoop/netnsplice
 classifiers =
     Development Status :: 3 - Alpha
-    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
+    License :: OSI Approved :: MIT No Attribution License (MIT-0)
     Topic :: Internet
     Topic :: System :: Networking
 
